# AIAgent_Dify_Public

backend/dify_chat_backend/: .coverage  .env  .env.example  API_SPEC.md  Dockerfile  README.md  fly.toml  pyproject.toml
backend/dify_chat_backend/app/: database.py  dify_client.py  main.py  slack_client.py  slack_routes.py
backend/dify_chat_backend/tests/: .env.test  test_slack_integration.py
frontend/dify_chat_frontend/: .env  fly.toml  package.json  pnpm-lock.yaml
frontend/dify_chat_frontend/src/: App.tsx  index.css
frontend/dify_chat_frontend/src/pages/: Chat.tsx  SlackIntegration.tsx
